jumped to Angular 11, fixed a few wonky file paths and dependency issues. also a few styling fixes

--- a/src/app/cat-gallery/cat-gallery-item/cat-gallery-item.component.css
+++ b/src/app/cat-gallery/cat-gallery-item/cat-gallery-item.component.css
@@ -1,5 +1,4 @@
 .gallery-image {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
