--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 body, p, span, h1, h2, h3, h4, h5 {
   font-family: Arial;
   color: #424142;
